--- a/1.html
+++ b/1.html
@@ -50,7 +50,7 @@
   <hr>
 
   <p><p style="margin-top:50px">
-  <img src="img\example architecture picture.jpg" width="100%">,<img src="img\example arcitecture picture2.jpg" width="100%"><br>
+  <img src="example architecture picture.jpg" width="100%">,<img src="example arcitecture picture2.jpg" width="100%"><br>
   "unsplash.com" is the site for photo with great resolution.</p>
 
   <hr>
